# aviation-ops-briefing-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: devops-infrastructure.md  phase-boundary-qa.md  sequential-developer.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml
.github/workflows/: ci.yml  claude-code-review.yml
agents/: CURRENT_STATE.md
agents/handoffs/: 2026-04-06-codex-issue-5-config-module.md
src/core/: config.py
src/db/: connection.py  models.py
tests/: test_config.py  test_db_models.py
